o Detect and remove JavaScript
o Show progress on long files
o Create PDF Portfolios

Extended features:

o -thinlines can ensure maximum as well as minimum thickness
o New -decompress-just-content for easier content stream debugging
o -squeeze processes xobjects inside xobjects
o Speed increases for -squeeze on huge files
o Select only such pages as are annotated

Fixes:

* Sanitizes inputs to prevent command injection attacks
o Fix PMAXX et al. w.r.t -add-rectangle
o Allow Float/Int to appear anywhere in CPDFJSON / bookmark JSON

* = Supported by a grant from NLnet

2.8.1 (April 2025)

New features:

* -remove-struct-tree removes whole structure tree
* -mark-as-artifact marks a whole file as an artifact

Extended features:

o -obj JSON output
* -obj/-obj-json can follow a chain from an object number
* -obj/-obj-json can explore through arrays and name/number trees
* -print-dict-entry, -remove-dict-entry and -replace-dict-entry
  can follow a chain from each found dictionary entry
* Much more of the PDF/UA Matterhorn verification suite implemented
* PDF/UA verifier now returns extra information with most failures
* Font lister now returns the font itself
o Allow %objnum in output name for -extract-images
* -show-boxes, -trim-marks, -table-of-contents, -add-text
  -add-rectangle, -impose, -twoup, -twoup-stack now preserve
  PDF/UA and PDF/UA-2 compatibility
* Preserve PDF/UA and PDF/UA-2 when drawing on existing PDF
* Preserve PDF/UA and PDF/UA-2 with -stamp-on and -combine-pages
o Allow -scale-stamp-to-fit for -combine-pages
* Allow -underneath for -combine-pages
* Preserve roundtripping of names destinations / actions
* -preserve-actions allows PDF/UA-2 style roundtripping of
  outlines

Fixes:

o Harden auto-compression against malformed streams
o Add backup JPEG dimensions method in Cpdfimage
o Correct object stream behaviour when splitting
o Fix margin calculation for -table-of-contents

* = Supported by a grant from NLnet

2.8 (December 2024)

New features:
