@@ -14,6 +14,7 @@ o New -decompress-just-content for easier content stream debugging
 o -squeeze processes xobjects inside xobjects
 o Speed increases for -squeeze on huge files
 o Select only such pages as are annotated
+o Allow -create-pdf and friends to appear in middle of AND
 
 Fixes:
 
